# farm

./: .gitignore  AGENTS.md  README.md  config.yaml.example  pyproject.toml
docs/: prd.md
docs/architecture/: workflow_ownership.md
docs/feature/v0/: technical_plan.md
docs/operations/: development_workflow.md  linear_style_guide.md  operations.md  quickstart.md  review_pipeline.md  worker_status_contract.md
features/v0/: plan.md
scripts/: observe_farm_tmux.py
scripts/demo/: check_linear_statuses.py  run_linear_flow.py  seed_linear_tasks.py
skills/farm-integration-review/: SKILL.md
skills/farm-integration-review/references/: review_playbook.md
skills/farm-integration-review/scripts/: update_parent_issue.py
skills/farm-linear-planning/: SKILL.md
skills/farm-linear-planning/agents/: openai.yaml
skills/farm-linear-planning/references/: command_playbook.md
skills/feature-task-decomposition/: SKILL.md
skills/feature-task-decomposition/agents/: openai.yaml
skills/feature-task-decomposition/references/: command_playbook.md
skills/integration-review/: SKILL.md
skills/integration-review/agents/: openai.yaml
src/farm/: __init__.py  cli.py  config.py
tests/: conftest.py
tests/unit/: test_cli_hardening.py  test_cli_intake_instructions.py  test_commands.py  test_config_env.py  test_daemon.py  test_intake_workflow.py  test_linear.py  test_linear_api.py  test_phase2_services.py  test_runner.py  test_runtime_factory.py  test_skill_runtime.py  test_state_machine.py  test_storage_json.py  test_task_service.py  test_worker_status.py
(+46 files in other folders)
