[project]
name = "farm"
version = "0.1.0"
description = "Lightweight orchestration helpers for worktrees, tmux, and coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0",
  "typer>=0.12,<1.0",
]

[project.scripts]
farm = "farm.cli.commands:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
